GRIDLY-7825 support enum values for FetchFileOption, FileType
