# api/openapi.yaml
@@ -168,7 +168,11 @@ paths:
         name: type
         required: false
         schema:
-          $ref: '#/components/schemas/ViewType'
+          enum:
+          - defaultView
+          - accessView
+          - userView
+          type: string
         style: form
       responses:
         "200":
@@ -258,6 +262,7 @@ paths:
           default: []
           items:
             type: string
+          nullable: true
           type: array
         style: form
       - description: page
@@ -267,6 +272,7 @@ paths:
         required: false
         schema:
           default: "{}"
+          nullable: true
           type: string
         style: form
       - description: query
@@ -276,6 +282,7 @@ paths:
         required: false
         schema:
           default: "{}"
+          nullable: true
           type: string
         style: form
       - description: sort
@@ -285,6 +292,7 @@ paths:
         required: false
         schema:
           default: "{}"
+          nullable: true
           type: string
         style: form
       - description: fetchFileOption
@@ -417,6 +425,7 @@ paths:
             - delete
             - override
             type: string
+          nullable: true
           type: array
         style: form
       responses:
@@ -452,6 +461,7 @@ paths:
         required: false
         schema:
           default: "{}"
+          nullable: true
           type: string
         style: form
       - description: type
@@ -460,15 +470,7 @@ paths:
         name: type
         required: false
         schema:
-          default: csv
-          enum:
-          - csv
-          - tsv
-          - xls
-          - xlsx
-          - json
-          - po
-          type: string
+          $ref: '#/components/schemas/FileType'
         style: form
       requestBody:
         content:
@@ -518,7 +520,7 @@ paths:
         content:
           multipart/form-data:
             schema:
-              $ref: '#/components/schemas/importView_request'
+              $ref: '#/components/schemas/uploadZip_request'
       responses:
         default:
           content:
@@ -612,7 +614,7 @@ paths:
         content:
           multipart/form-data:
             schema:
-              $ref: '#/components/schemas/importView_request'
+              $ref: '#/components/schemas/uploadZip_request'
       responses:
         "201":
           content:
@@ -975,6 +977,7 @@ paths:
             - delete
             - override
             type: string
+          nullable: true
           type: array
         style: form
       responses:
@@ -1243,6 +1246,7 @@ paths:
           default: []
           items:
             type: string
+          nullable: true
           type: array
         style: form
       - description: include
@@ -1256,6 +1260,7 @@ paths:
             enum:
             - records
             type: string
+          nullable: true
           type: array
         style: form
       - description: page
@@ -1265,6 +1270,7 @@ paths:
         required: false
         schema:
           default: "{}"
+          nullable: true
           type: string
         style: form
       - description: query
@@ -1274,6 +1280,7 @@ paths:
         required: false
         schema:
           default: "{}"
+          nullable: true
           type: string
         style: form
       - description: sort
@@ -1283,6 +1290,7 @@ paths:
         required: false
         schema:
           default: "{}"
+          nullable: true
           type: string
         style: form
       responses:
@@ -1355,6 +1363,7 @@ paths:
           default: []
           items:
             type: string
+          nullable: true
           type: array
         style: form
       - description: fileHeader
@@ -1372,6 +1381,7 @@ paths:
         required: false
         schema:
           default: "{}"
+          nullable: true
           type: string
         style: form
       - description: sort
@@ -1381,6 +1391,7 @@ paths:
         required: false
         schema:
           default: "{}"
+          nullable: true
           type: string
         style: form
       - description: type
@@ -2297,6 +2308,22 @@ components:
           - running
           type: string
       type: object
+    FileType:
+      enum:
+      - csv
+      - tsv
+      - xls
+      - xlsx
+      - json
+      - po
+      type: string
+      x-enum-varnames:
+      - csv
+      - tsv
+      - xls
+      - xlsx
+      - json
+      - po
     UploadedFile:
       example:
         originalName: originalName
@@ -3165,13 +3192,6 @@ components:
             type: string
           type: object
       type: object
-    ViewType:
-      default: accessView
-      enum:
-      - defaultView
-      - accessView
-      - userView
-      type: string
     FetchFileOption:
       default: id
       enum:
@@ -3179,23 +3199,18 @@ components:
       - id
       - name
       type: string
+      x-enum-varnames:
+      - all
+      - id
+      - name
     ExportFileHeader:
-      default: columnName
       enum:
       - none
       - columnName
-      nullable: true
       type: string
-    FileType:
-      default: csv
-      enum:
-      - csv
-      - tsv
-      - xls
-      - xlsx
-      - json
-      - po
-      type: string
+      x-enum-varnames:
+      - none
+      - columnName
     DeleteRecord:
       example:
         identifiers:
@@ -4693,6 +4708,16 @@ components:
           type: array
       type: object
     importView_request:
+      properties:
+        file:
+          description: "The following file types are supported: csv, tsv, xls, xlsx\
+            \ and json"
+          format: binary
+          type: string
+      required:
+      - file
+      type: object
+    uploadZip_request:
       properties:
         file:
           format: binary
